# decoder-bench

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
decoder_bench/: __init__.py  dataset_gen.py  decoders.py  eval.py  eval.sh  generate.sh  generator.py  rare_event_sim.py  sampler.py
decoder_bench/common/: __init__.py  build_circuit.py  codes_q.py  color_code_gen.py  data_management.py  dem_matrices.py  noise.py  utils.py
decoder_bench/ls_ckt_gen/: README.md  __init__.py  circuit_merge_split.py  circuit_parser.py  circuit_zxxz.py  circuit_zzxx.py  data_prep.py  gate_lib.py  stim_integ.py
decoder_bench/ls_ckt_gen/data/: T1_T2.csv  cnot_data.csv  readout_data.csv
decoder_bench/results/: benchmark_results.csv
