[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "decoder-bench"
version = "0.1.0"
description = "A comprehensive benchmarking suite for quantum error correction decoders"
readme = "README.md"
license = {file = "LICENSE"}

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Quantum Physics",
    "Topic :: Scientific/Engineering :: Computer Architecture",
]
requires-python = ">=3.10"
dependencies = [
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "dill==0.4.0",
    "fonttools==4.59.1",
    "h5py==3.14.0",
    "igraph==0.11.9",
    "iniconfig==2.1.0",
    "kiwisolver==1.4.9",
    "ldpc==2.3.8",
    "matplotlib==3.10.5",
    "multiprocess==0.70.18",
    "networkx==3.5",
    "numpy==2.3.2",
    "p_tqdm==1.4.2",
    "packaging==25.0",
    "pandas==2.3.1",
    "pathos==0.3.4",
    "pillow==11.3.0",
    "pluggy==1.6.0",
    "pox==0.3.6",
    "ppft==1.7.7",
    "Pygments==2.19.2",
    "PyMatching==2.3.0",
    "pyparsing==3.2.3",
    "pytest==8.4.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "scipy==1.16.1",
    "seaborn==0.13.2",
    "sinter==1.15.0",
    "six==1.17.0",
    "stim==1.15.0",
    "texttable==1.7.0",
    "tqdm==4.67.1",
    "tzdata==2025.2",
    "attrs>=25.3.0",
    "certifi>=2025.4.26",
    "charset-normalizer>=3.4.1",
    "click>=8.1.8",
    "dataclasses>=0.6",
    "exceptiongroup>=1.2.2",
    "filelock>=3.18.0",
    "idna>=3.10",
    "importlib_resources>=6.5.2",
    "jsonschema>=4.23.0",
    "jsonschema-specifications>=2025.4.1",
    "msgpack>=1.1.0",
    "protobuf>=6.30.2",
    "ray>=2.45.0",
    "referencing>=0.36.2",
    "requests>=2.32.3",
    "rpds-py>=0.24.0",
    "tomli>=2.2.1",
    "typing_extensions>=4.13.2",
    "urllib3>=2.4.0",
    "zipp>=3.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "black",
    "flake8",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/satvikmaurya/decoder-bench"
Repository = "https://github.com/satvikmaurya/decoder-bench"
Documentation = "https://github.com/satvikmaurya/decoder-bench"
Issues = "https://github.com/satvikmaurya/decoder-bench/issues"

[project.scripts]
decoder-bench-generate = "decoder_bench.generator:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["decoder_bench*"]
